Update code for final format_2

--- a/3_process_sentiment.ipynb
+++ b/3_process_sentiment.ipynb
@@ -523,7 +523,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Apply the PELT algorithm to the complete data set"
+    "### Apply the PELT algorithm to the complete data set\n",
+    "\n",
+    "Source: https://techrando.com/2019/08/14/a-brief-introduction-to-change-point-detection-using-python/"
    ]
   },
   {
@@ -532,6 +534,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# RUPTURES PACKAGE. \n",
     "import ruptures as rpt\n",
     "\n",
     "# merged_df = pd.merge(hour_df, price_data, on='date', how='outer')\n",
@@ -540,13 +543,6 @@
     "# merged_df.fillna(0, inplace=True)\n",
     "\n",
     "# print(merged_df.head())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://techrando.com/2019/08/14/a-brief-introduction-to-change-point-detection-using-python/"
    ]
   },
   {
@@ -605,15 +601,16 @@
    ],
    "source": [
     "def retrieve_time_series(api, series_ID):\n",
+    "    \"\"\" Retrieve time series data from the API.\n",
+    "    Parameters\n",
+    "    —------—\n",
+    "    api : API object\n",
+    "    series_ID : string, ID of the time series\n",
     "    \"\"\"\n",
-    "    Return the time series dataframe, based on API and unique Series ID\n",
-    "    api: API that we're connected to\n",
-    "    series_ID: string. Name of the series that we want to pull from the EIA API\n",
-    "    \"\"\"\n",
-    "    #Retrieve Data By Series ID \n",
+    "\n",
     "    series_search = api.data_by_series(series=series_ID)\n",
-    "    ##Create a pandas dataframe from the retrieved time series\n",
     "    df = pd.DataFrame(series_search)\n",
+    "\n",
     "    return df\n",
     "\n",
     "###############################################################################\n",
@@ -622,12 +619,21 @@
     "# Create a copy of merged_df to price_df\n",
     "price_df = merged_df.copy()\n",
     "\n",
-    "\n",
-    "#Convert the time series values to a numpy 1D array\n",
+    "# Process the dataframe and convert the close column to numpy array\n",
     "points=np.array(price_df['close'])\n",
-    "    \n",
-    "#RUPTURES PACKAGE\n",
-    "#Changepoint detection with the Pelt search method\n",
+    "\n",
+    "\n",
+    "# The Pelt search method is the most efficient, but requires the user to specify\n",
+    "# the number of breakpoints.\n",
+    "\n",
+    "# The Binary Segmentation search method is the most efficient, but requires the\n",
+    "# user to specify the number of breakpoints.\n",
+    "\n",
+    "# The 'dynamic' method, which uses a fixed window size and a fixed number of\n",
+    "# breakpoints, but also allows for the removal of outliers.\n",
+    "\n",
+    "\n",
+    "# Changepoint detection with the Pelt search method. \n",
     "model=\"rbf\"\n",
     "algo = rpt.Pelt(model=model).fit(points)\n",
     "result = algo.predict(pen=10)\n",
@@ -635,7 +641,7 @@
     "plt.title('Change Point Detection: Pelt Search Method')\n",
     "plt.show()  \n",
     "    \n",
-    "#Changepoint detection with the Binary Segmentation search method\n",
+    "# Changepoint detection with the Binary Segmentation search method\n",
     "model = \"l2\"  \n",
     "algo = rpt.Binseg(model=model).fit(points)\n",
     "my_bkps = algo.predict(n_bkps=10)\n",
@@ -643,16 +649,8 @@
     "rpt.show.display(points, my_bkps, figsize=(10, 6))\n",
     "plt.title('Change Point Detection: Binary Segmentation Search Method')\n",
     "plt.show()\n",
-    "    \n",
-    "#Changepoint detection with window-based search method\n",
-    "model = \"l2\"  \n",
-    "algo = rpt.Window(width=40, model=model).fit(points)\n",
-    "my_bkps = algo.predict(n_bkps=10)\n",
-    "rpt.show.display(points, my_bkps, figsize=(10, 6))\n",
-    "plt.title('Change Point Detection: Window-Based Search Method')\n",
-    "plt.show()\n",
-    "    \n",
-    "#Changepoint detection with dynamic programming search method\n",
+    "\n",
+    "# Changepoint detection with dynamic programming search method\n",
     "model = \"l1\"  \n",
     "algo = rpt.Dynp(model=model, min_size=3, jump=5).fit(points)\n",
     "my_bkps = algo.predict(n_bkps=10)\n",
