Updates on extracting trading volume data

--- a/2_crypto_market-price_extraction.ipynb
+++ b/2_crypto_market-price_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'&api_key=2505dbe622f0828b75b9fce3b24781f35bd23b25e6cf0ca4b118d76a9bb9e6aa'"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set the API key\n",
     "key = config.cryptocompare_key\n",
@@ -32,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +55,11 @@
     "_URL_HIST_PRICE_DAY = 'https://min-api.cryptocompare.com/data/histoday?fsym={}&tsym={}&limit={}&e={}&toTs={}'\n",
     "_URL_HIST_PRICE_HOUR = 'https://min-api.cryptocompare.com/data/histohour?fsym={}&tsym={}&limit={}&e={}&toTs={}'\n",
     "# _URL_EXCHANGES = 'https://www.cryptocompare.com/api/data/exchanges?'\n",
-    "_URL_EXCHANGES_HOUR = 'https://min-api.cryptocompare.com/data/exchange/histohour?tsym={}&limit={}'\n",
+    "_URL_EXCHANGES_HOUR = 'https://min-api.cryptocompare.com/data/exchange/histohour?tsym={}&limit={}&toTs={}'\n",
     "\n",
     "# DEFAULTS\n",
-    "CURRENCY = 'USD'    # Default currency\n",
-    "LIMIT = 1440    # Default limit"
+    "CURRENCY = 'DOGE'    # Default currency\n",
+    "LIMIT = 2000    # Default limit"
    ]
   },
   {
@@ -61,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,12 +213,12 @@
     "    return None\n",
     "\n",
     "\n",
-    "def get_exchanges(currency: str = CURRENCY, limit: int = LIMIT) -> Optional[Dict]:\n",
+    "def get_exchanges(currency: str = CURRENCY, limit: int = LIMIT, toTs: Timestamp = time.time()) -> Optional[Dict]:\n",
     "    \"\"\"\n",
     "    Get the list of available exchanges.\n",
     "    :returns: list of available exchanges\n",
     "    \"\"\"\n",
-    "    response = _query_cryptocompare(_URL_EXCHANGES_HOUR.format(currency, limit))\n",
+    "    response = _query_cryptocompare(_URL_EXCHANGES_HOUR.format(currency, limit, _format_timestamp(toTs)))\n",
     "    if response:\n",
     "        return response['Data']\n",
     "    return None"
@@ -222,23 +233,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1643500800\n"
+     ]
+    }
+   ],
    "source": [
-    "path = Path(f'{os.getcwd()}')\n",
-    "df = get_historical_price_hour('BTC', currency='USD')"
+    "# REQUEST HISTORICAL PRICE LOWER THAN THIS TIMESTAMP\n",
+    "time_stamp = int(time.mktime(datetime.datetime(2022, 1, 30).timetuple()))\n",
+    "print(time_stamp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = Path(f'{os.getcwd()}')\n",
+    "# df = get_historical_price_hour('DOGE', currency='USD', limit=2000, toTs=time_stamp)\n",
+    "df_volume = get_exchanges(toTs=time_stamp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Comvert df to dataframe and save to csv\n",
-    "df = pd.DataFrame(df)\n",
-    "df = df[['time', 'close']]\n",
+    "df = pd.DataFrame(df_volume)\n",
+    "# df = df[['time', 'close']]\n",
+    "df = df[['time', 'volume']]\n",
     "df['time'] = pd.to_datetime(df['time'], unit='s')\n",
     "\n",
     "\n",
@@ -248,11 +280,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time      2022-01-30 00:00:00\n",
+      "volume           9460801158.4\n",
+      "Name: 2000, dtype: object\n",
+      "time      2021-11-07 16:00:00\n",
+      "volume          6997864224.87\n",
+      "Name: 0, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print first and last elemnt column time\n",
+    "print(df.iloc[0])\n",
+    "print(df.iloc[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(f\"{path}\\price_history-raw.csv\")"
+    "df.to_csv(f\"{path}\\DOGE-price_history-raw.csv\")"
    ]
   },
   {
@@ -264,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,15 +328,39 @@
     "new_df = df.copy()\n",
     "\n",
     "# Remove Unnamed column\n",
-    "new_df = new_df.drop(columns=['Unnamed: 0'])\n",
-    "print(new_df.head())\n",
+    "# new_df = new_df.drop(columns=['Unnamed: 0'])\n",
+    "# print(new_df.head())\n",
     "\n",
     "# Filter data to only show data between 21 Feb 2022 and now\n",
-    "df_volume = new_df[(new_df['time'] >= '2022-02-20') & (new_df['time'] <= '2022-03-04')]\n",
+    "df_volume = new_df[(new_df['time'] >= '2022-01-12') & (new_df['time'] <= '2022-01-30')]\n",
     "\n",
     "# Save updated prices from filtered_df to a csv file\n",
-    "df_volume.to_csv(f\"{path}\\price_history-filtered.csv\")"
+    "df_volume.to_csv(f\"{path}\\DOGE-VOLUME-filtered.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "433\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(df_volume))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
