not relevant changes

--- a/2_crypto_market-price_extraction.ipynb
+++ b/2_crypto_market-price_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "'&api_key=2505dbe622f0828b75b9fce3b24781f35bd23b25e6cf0ca4b118d76a9bb9e6aa'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "_URL_EXCHANGES_HOUR = 'https://min-api.cryptocompare.com/data/exchange/histohour?tsym={}&limit={}&toTs={}'\n",
     "\n",
     "# DEFAULTS\n",
-    "CURRENCY = 'DOGE'    # Default currency\n",
+    "CURRENCY = 'USD'    # Default currency\n",
     "LIMIT = 2000    # Default limit"
    ]
   },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -252,25 +252,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = Path(f'{os.getcwd()}')\n",
-    "# df = get_historical_price_hour('DOGE', currency='USD', limit=2000, toTs=time_stamp)\n",
-    "df_volume = get_exchanges(toTs=time_stamp)"
+    "df = get_historical_price_hour('DOGE', currency='USD', limit=2000, toTs=time_stamp)\n",
+    "# df_volume = get_exchanges(toTs=time_stamp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Comvert df to dataframe and save to csv\n",
-    "df = pd.DataFrame(df_volume)\n",
-    "# df = df[['time', 'close']]\n",
-    "df = df[['time', 'volume']]\n",
+    "df = pd.DataFrame(df)\n",
+    "df = df[['time', 'close']]\n",
+    "# df = df[['time', 'volume']]\n",
     "df['time'] = pd.to_datetime(df['time'], unit='s')\n",
     "\n",
     "\n",
@@ -280,18 +280,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time      2022-01-30 00:00:00\n",
-      "volume           9460801158.4\n",
+      "time     2022-01-30 00:00:00\n",
+      "close                 0.1419\n",
       "Name: 2000, dtype: object\n",
-      "time      2021-11-07 16:00:00\n",
-      "volume          6997864224.87\n",
+      "time     2021-11-07 16:00:00\n",
+      "close                 0.2668\n",
       "Name: 0, dtype: object\n"
      ]
     }
@@ -335,32 +335,8 @@
     "df_volume = new_df[(new_df['time'] >= '2022-01-12') & (new_df['time'] <= '2022-01-30')]\n",
     "\n",
     "# Save updated prices from filtered_df to a csv file\n",
-    "df_volume.to_csv(f\"{path}\\DOGE-VOLUME-filtered.csv\")"
+    "df_volume.to_csv(f\"{path}\\DOGE-price-filtered.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "433\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(df_volume))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
