Updates on the formatting and location of files

--- a/4_SVM_RF_prediction_BTC_price.ipynb
+++ b/4_SVM_RF_prediction_BTC_price.ipynb
@@ -105,150 +105,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.05413956 0.27965431]\n",
-      " [0.76714166 0.3156697 ]\n",
-      " [0.11007619 0.22277735]\n",
-      " [0.13032474 0.18460817]\n",
-      " [0.30395606 0.26181537]\n",
-      " [0.07995647 0.22671897]\n",
-      " [0.36470171 0.21004571]\n",
-      " [0.08780278 0.20168264]\n",
-      " [0.36217064 0.02457683]\n",
-      " [0.17411223 0.07229508]\n",
-      " [0.7317067  0.        ]\n",
-      " [0.0923587  0.05355613]\n",
-      " [0.7722038  0.03676223]\n",
-      " [0.20802855 0.01922827]\n",
-      " [0.18904553 0.07405445]\n",
-      " [0.17740262 0.04431881]\n",
-      " [0.12095978 0.0502475 ]\n",
-      " [0.18803311 0.05257479]\n",
-      " [0.16980941 0.05482211]\n",
-      " [0.14070212 0.07378742]\n",
-      " [0.16626591 0.12525482]\n",
-      " [0.07185705 0.12033593]\n",
-      " [0.08425928 0.09300214]\n",
-      " [0.04528082 0.12861902]\n",
-      " [0.08805589 0.12337754]\n",
-      " [0.0592017  0.11548346]\n",
-      " [0.10071123 0.07918614]\n",
-      " [0.25890303 0.32605779]\n",
-      " [0.11159483 0.46112735]\n",
-      " [0.14070212 0.48498579]\n",
-      " [0.17335291 0.52535079]\n",
-      " [0.12855299 0.51150226]\n",
-      " [0.06932598 0.53052315]\n",
-      " [0.07945025 0.59829106]\n",
-      " [0.10501405 0.56978481]\n",
-      " [0.07312258 0.7907269 ]\n",
-      " [0.05363335 0.77879767]\n",
-      " [0.03794072 0.82989503]\n",
-      " [0.06375762 0.79104542]\n",
-      " [0.10248298 0.77848999]\n",
-      " [0.06325141 0.77620065]\n",
-      " [0.09084006 0.8026385 ]\n",
-      " [0.04300286 0.78398358]\n",
-      " [0.04654636 0.81712679]\n",
-      " [0.07641297 0.82140321]\n",
-      " [0.12450328 0.82654845]\n",
-      " [0.09995191 0.78967778]\n",
-      " [0.13817105 0.83393153]\n",
-      " [0.10906376 0.83916489]\n",
-      " [0.12728745 0.97577558]\n",
-      " [0.15993824 0.95467139]\n",
-      " [0.16322863 0.8813543 ]\n",
-      " [0.07666608 0.83330261]\n",
-      " [0.11007619 0.808719  ]\n",
-      " [0.76207953 0.85171219]\n",
-      " [0.08451239 0.86784328]\n",
-      " [0.09742084 0.85468467]\n",
-      " [0.07894404 0.8971262 ]\n",
-      " [0.10298919 0.87116275]\n",
-      " [0.29383179 0.9129496 ]\n",
-      " [0.18297097 0.946738  ]\n",
-      " [0.3090182  0.92958355]\n",
-      " [0.40013668 0.8953831 ]\n",
-      " [0.41532309 0.91040679]\n",
-      " [0.58996684 0.93651121]\n",
-      " [0.92406793 0.92578561]\n",
-      " [0.59756005 0.92874318]\n",
-      " [0.58996684 0.88468868]\n",
-      " [0.49378623 0.88714474]\n",
-      " [0.62793288 0.86958366]\n",
-      " [0.41785416 0.87772986]\n",
-      " [0.33432889 0.91178257]\n",
-      " [0.28876965 0.90687316]\n",
-      " [0.52162798 0.89120428]\n",
-      " [0.28117644 0.82964021]\n",
-      " [0.33432889 1.        ]\n",
-      " [0.5444076  0.91351888]\n",
-      " [0.83041839 0.92592929]\n",
-      " [1.         0.86290541]\n",
-      " [0.35204637 0.83631033]\n",
-      " [0.70639601 0.85172168]\n",
-      " [0.32420461 0.86286475]\n",
-      " [0.29636285 0.89856432]\n",
-      " [0.17411223 0.90375294]\n",
-      " [0.2761143  0.87990127]\n",
-      " [0.32673568 0.88855033]\n",
-      " [0.66842998 0.86726993]\n",
-      " [0.20296641 0.86607036]\n",
-      " [0.2244805  0.80007943]\n",
-      " [0.17942747 0.81425733]\n",
-      " [0.16980941 0.80462693]\n",
-      " [0.3900124  0.81632708]\n",
-      " [0.18195854 0.8177381 ]\n",
-      " [0.24523526 0.81435221]\n",
-      " [0.20954719 0.77700578]\n",
-      " [0.16424106 0.80388957]\n",
-      " [0.15791339 0.81046074]\n",
-      " [0.13412134 0.83353303]\n",
-      " [0.12070667 0.88381442]\n",
-      " [0.11184793 0.82161059]\n",
-      " [0.06426384 0.69560214]\n",
-      " [0.07615986 0.67670867]\n",
-      " [0.08805589 0.67313437]\n",
-      " [0.0627452  0.65363502]\n",
-      " [0.07362879 0.64792997]\n",
-      " [0.         0.62019903]\n",
-      " [0.121466   0.63421835]\n",
-      " [0.05945481 0.68766875]\n",
-      " [0.04249665 0.68187154]\n",
-      " [0.2761143  0.56438203]\n",
-      " [0.09463667 0.55455238]\n",
-      " [0.27105217 0.53966288]\n",
-      " [0.12121289 0.54551973]\n",
-      " [0.15816649 0.53424654]\n",
-      " [0.13462755 0.53069664]\n",
-      " [0.31408034 0.5368029 ]\n",
-      " [0.13336202 0.54016845]\n",
-      " [0.10197676 0.55386382]\n",
-      " [0.06983219 0.55290145]\n",
-      " [0.14677668 0.57416424]\n",
-      " [0.54946974 0.58055107]\n",
-      " [0.23257992 0.54721132]\n",
-      " [0.18600825 0.52777025]\n",
-      " [0.26599003 0.49992138]\n",
-      " [0.1804399  0.4422664 ]\n",
-      " [0.90381938 0.45053323]\n",
-      " [0.24827255 0.46232149]\n",
-      " [0.44063378 0.43087393]\n",
-      " [0.00980536 0.31268637]\n",
-      " [0.11741628 0.28180946]\n",
-      " [0.01007872 0.26459809]\n",
-      " [0.10906376 0.2157765 ]\n",
-      " [0.07540054 0.23186964]\n",
-      " [0.07565365 0.18137409]\n",
-      " [0.08198132 0.20860216]\n",
-      " [0.03768762 0.20039226]\n",
-      " [0.05692374 0.22037822]\n",
+      "[[0.05692374 0.22037822]\n",
       " [0.05135539 0.19330467]\n",
       " [0.02503227 0.21176982]\n",
       " [0.03895315 0.20831888]\n",
@@ -298,7 +162,8 @@
     }
    ],
    "source": [
-    "print(data_scaled)"
+    "# print the last 46 lines in data_scaled\n",
+    "print(data_scaled[-46:])"
    ]
   },
   {
@@ -310,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +207,7 @@
     "    for i in range(len(xtrain)):\n",
     "        X_train[i] = xtrain[i]\n",
     "        y_train[i] = ytrain[i]\n",
-    "    print(\"x_train\", X_train)\n",
+    "    print(\"x_train\", X_train.shape)\n",
     "    print(\"y_train\", y_train.shape)\n",
     "\n",
     "    # fill the numpy array with the test data\n",
@@ -418,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -429,13 +294,7 @@
       "x_train (136, 2)\n",
       "y_train (136, 1)\n",
       "x_test (46, 2)\n",
-      "y_test (46, 1)\n",
-      "\n",
-      "Accuracy of the model on testing data:  97.0 %\n",
-      "Mean Squared Error: 0.0001\n",
-      "Root mean squared error: 0.0079\n",
-      "Mean absolute error: 0.0053\n",
-      "Mean absolute percentage error: 2.7199999999999998 %\n"
+      "y_test (46, 1)\n"
      ]
     },
     {
@@ -444,6 +303,18 @@
      "text": [
       "C:\\Users\\paulc\\AppData\\Local\\Temp/ipykernel_22200/453796598.py:47: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  rf.fit(X_train, y_train)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Accuracy of the model on testing data:  97.0 %\n",
+      "Mean Squared Error: 0.0001\n",
+      "Root mean squared error: 0.0079\n",
+      "Mean absolute error: 0.0053\n",
+      "Mean absolute percentage error: 2.7199999999999998 %\n"
      ]
     },
     {
