Final formatting to the code

--- a/4_SVM_RF_prediction_BTC_price.ipynb
+++ b/4_SVM_RF_prediction_BTC_price.ipynb
@@ -64,8 +64,11 @@
    "outputs": [],
    "source": [
     "# Read data from csv files\n",
+    "# TODO: change the path to your own path depending on the file that wants to be processed.\n",
+    "\n",
     "# df_read = pd.read_csv(f'{os.getcwd()}/dataset_prediction-models/final_price-and-compund.csv', index_col=\"date\")\n",
     "df_read = pd.read_csv(f'{os.getcwd()}/dataset_prediction-models/final_price-and-score.csv', index_col=\"date\")\n",
+    "\n",
     "df_read.rename(columns={'close':'Price'}, inplace=True)\n",
     "# reorder columns compund, price\n",
     "df_read = df_read[['score', 'Price']]\n",
@@ -101,69 +104,6 @@
     "# save the numpy array back in a dataframe\n",
     "df_scaled = pd.DataFrame(data_scaled, columns=df_read.columns, index=df_read.index)\n",
     "print(df_scaled.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.05692374 0.22037822]\n",
-      " [0.05135539 0.19330467]\n",
-      " [0.02503227 0.21176982]\n",
-      " [0.03895315 0.20831888]\n",
-      " [0.06552937 0.21594865]\n",
-      " [0.04553393 0.22494334]\n",
-      " [0.0483181  0.21771614]\n",
-      " [0.11184793 0.23180051]\n",
-      " [0.22296186 0.2319225 ]\n",
-      " [0.21207826 0.22383324]\n",
-      " [0.43810271 0.21482905]\n",
-      " [0.25561265 0.22907201]\n",
-      " [0.11210104 0.23638868]\n",
-      " [0.09716773 0.26325349]\n",
-      " [0.07666608 0.27214924]\n",
-      " [0.09159938 0.26631272]\n",
-      " [0.2135969  0.27093748]\n",
-      " [0.18322408 0.27744088]\n",
-      " [0.09033385 0.26138434]\n",
-      " [0.10121744 0.2741458 ]\n",
-      " [0.08704346 0.26611076]\n",
-      " [0.09008074 0.29257571]\n",
-      " [0.28623858 0.27312651]\n",
-      " [0.11108861 0.2826932 ]\n",
-      " [0.07084462 0.25621876]\n",
-      " [0.06704801 0.27616134]\n",
-      " [0.09742084 0.2798129 ]\n",
-      " [0.17968058 0.27701527]\n",
-      " [0.08653724 0.26740385]\n",
-      " [0.06856666 0.23142506]\n",
-      " [0.07464122 0.17512822]\n",
-      " [0.03414412 0.11182106]\n",
-      " [0.05818927 0.12197737]\n",
-      " [0.07793161 0.14865649]\n",
-      " [0.09818016 0.2001144 ]\n",
-      " [0.05667063 0.18877615]\n",
-      " [0.09615531 0.19129726]\n",
-      " [0.05768306 0.23950483]\n",
-      " [0.08400618 0.21291788]\n",
-      " [0.07565365 0.1893495 ]\n",
-      " [0.10805133 0.1693649 ]\n",
-      " [0.70133387 0.19209562]\n",
-      " [0.36470171 0.21230251]\n",
-      " [0.05641753 0.20727112]\n",
-      " [0.10071123 0.1335352 ]\n",
-      " [0.06704801 0.12942416]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print the last 46 lines in data_scaled\n",
-    "print(data_scaled[-46:])"
    ]
   },
   {
@@ -347,23 +287,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16.2\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(0.0162*1000)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -414,27 +337,6 @@
     "                                '': '', \n",
     "                                'cross_correlation': curr_corr}, \n",
     "                               ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           script     train_p   test_p         mse    rmse     mae    mape    \\\n",
-      "0  RF_price-score          60       40      0.0001  0.0113  0.0087  0.0323     \n",
-      "\n",
-      "   cross_correlation  \n",
-      "0           0.996691  \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(master_df.head())"
    ]
   },
   {
@@ -654,29 +556,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "               script     train_p   test_p         mse    rmse     mae  \\\n",
-      "0      RF_price-score          60       40      0.0001  0.0113  0.0087   \n",
-      "1  SV_price-and-score          60       40      0.0001  0.0219  0.0166   \n",
-      "\n",
-      "     mape    cross_correlation  \n",
-      "0  0.0323             0.996691  \n",
-      "1  0.0805             0.987641  \n"
-     ]
-    }
-   ],
-   "source": [
-    "print(master_df)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -726,13 +605,6 @@
     "else:\n",
     "  master_df.to_csv('metrics.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
